--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,6 +6,10 @@
   left: 0;
   background-color: rgba($color-black, 0.8);
   z-index: 3500;
+  // Hide popup but still be able to animate it
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
 
   &__content {
     @include absolute-centering;
@@ -15,6 +19,10 @@
     border-radius: 0.3rem;
     display: table;
     overflow: hidden;
+    opacity: 0;
+    transform: translate (-50%, -50%) scale(0.5);
+    // Animated popup with a 2s delay
+    transition: all 0.4s 0.2s;
   }
 
   &__left {
@@ -51,5 +59,36 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+  }
+
+  // The popup id class when button triggered is displayed
+  // Open states
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate (-50%, -50%) scale(1);
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+      color: $color-grey-dark;
+      position: absolute;
+      top: 2.5rem;
+      right: 2.5rem;
+      font-size: 3rem;
+      text-decoration: none;
+      display: inline-block;
+      transition: all 0.2s;
+      line-height: 1;
+    }
+
+    &:hover {
+      color: $color-primary;
+    }
   }
 }
