--- a/css/style.css
+++ b/css/style.css
@@ -408,17 +408,24 @@ body {
 @media only screen and (max-width: 56.25em) {
   .card {
     height: auto;
+    border-radius: 0.3rem;
+    background-color: #fff;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   }
   .card__side {
     height: auto;
     position: relative;
-    border-radius: 0.3rem;
+    box-shadow: none;
   }
   .card__side--back {
     transform: rotateY(0);
+    clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
   }
   .card:hover .card__side--front {
     transform: rotateY(0);
+  }
+  .card__details {
+    padding: 1rem 3rem;
   }
   .card__cta {
     position: relative;
@@ -426,12 +433,13 @@ body {
     left: 0;
     transform: translate(0);
     width: 100%;
+    padding: 7rem 4rem 4rem 4rem;
   }
   .card__price-box {
-    margin-bottom: 8rem;
+    margin-bottom: 3rem;
   }
   .card__price-value {
-    font-size: 6rem;
+    font-size: 4rem;
   }
 }
 
@@ -702,6 +710,18 @@ body {
   font-size: 1.6rem;
   transform: skewX(-12deg);
 }
+@media only screen and (max-width: 56.25em) {
+  .story {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .story {
+    transform: skewX(0);
+  }
+}
 .story__shape {
   width: 15rem;
   height: 15rem;
@@ -713,6 +733,11 @@ body {
   transform: translateX(-3rem) skewX(12deg);
   position: relative;
 }
+@media only screen and (max-width: 37.5em) {
+  .story__shape {
+    transform: translateX(-3rem) skewX(0);
+  }
+}
 .story__img {
   height: 100%;
   transform: translateX(-15%) scale(1.4);
@@ -721,6 +746,11 @@ body {
 }
 .story__text {
   transform: skewX(12deg);
+}
+@media only screen and (max-width: 37.5em) {
+  .story__text {
+    transform: skewX(0);
+  }
 }
 .story__caption {
   position: absolute;
