--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -191,20 +191,28 @@
   // Media Query for touch devices
   @include respond(tab-port) {
     height: auto;
+    border-radius: 0.3rem;
+    background-color: $color-white;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 
     &__side {
       height: auto;
       position: relative;
-      border-radius: 0.3rem;
+      box-shadow: none;
 
       &--back {
         transform: rotateY(0);
+        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
       }
     }
 
     // On hover the side transform
     &:hover &__side--front {
       transform: rotateY(0);
+    }
+
+    &__details {
+      padding: 1rem 3rem;
     }
 
     // Back side styling
@@ -214,14 +222,15 @@
       left: 0;
       transform: translate(0);
       width: 100%;
+      padding: 7rem 4rem 4rem 4rem;
     }
 
     &__price-box {
-      margin-bottom: 8rem;
+      margin-bottom: 3rem;
     }
 
     &__price-value {
-      font-size: 6rem;
+      font-size: 4rem;
     }
   }
 }
