--- a/css/style.css
+++ b/css/style.css
@@ -553,6 +553,11 @@ body {
   display: block;
   translate: all 0.3s;
 }
+@media only screen and (max-width: 56.25em) {
+  .form__input {
+    width: 100%;
+  }
+}
 .form__input:focus {
   outline: none;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -583,6 +588,12 @@ body {
 .form__radio-group {
   width: 49%;
   display: inline-block;
+}
+@media only screen and (max-width: 56.25em) {
+  .form__radio-group {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
 }
 .form__radio-label {
   font-size: 1.6rem;
@@ -645,15 +656,39 @@ body {
   transform: translate -50%, -50% scale(0.5);
   transition: all 0.4s 0.2s;
 }
+@media only screen and (max-width: 75em) {
+  .popup__content {
+    display: block;
+  }
+}
 .popup__left {
   width: 33.33333%;
   display: table-cell;
+}
+@media only screen and (max-width: 75em) {
+  .popup__left {
+    display: flex;
+    width: 50%;
+  }
 }
 .popup__right {
   width: 66.66667%;
   display: table-cell;
   vertical-align: middle;
   padding: 3rem 5rem;
+}
+@media only screen and (max-width: 75em) {
+  .popup__right {
+    display: block;
+    margin: auto;
+    width: 80%;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .popup__right {
+    width: 95%;
+    padding: 1rem 2rem;
+  }
 }
 .popup__img {
   display: block;
@@ -675,6 +710,15 @@ body {
   -ms-hyphens: auto;
   -webkit-hyphens: auto;
   hyphens: auto;
+}
+@media only screen and (max-width: 37.5em) {
+  .popup__text {
+    width: 90%;
+    column-count: 1;
+    column-gap: 0;
+    column-rule: none;
+    font-size: 1.2rem;
+  }
 }
 .popup:target {
   opacity: 1;
@@ -1139,11 +1183,30 @@ body {
   background-size: cover;
   border-radius: 0.3rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
-  height: 50rem;
+}
+@media only screen and (max-width: 75em) {
+  .book {
+    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url("../img/nat-10.jpg");
+  }
+}
+@media only screen and (max-width: 56.25em) {
+  .book {
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url("../img/nat-10.jpg");
+  }
 }
 .book__form {
   width: 50%;
   padding: 6rem;
+}
+@media only screen and (max-width: 75em) {
+  .book__form {
+    width: 65%;
+  }
+}
+@media only screen and (max-width: 56.25em) {
+  .book__form {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
