--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -23,11 +23,20 @@
     transform: translate (-50%, -50%) scale(0.5);
     // Animated popup with a 2s delay
     transition: all 0.4s 0.2s;
+
+    @include respond(tab-land) {
+      display: block;
+    }
   }
 
   &__left {
     width: 33.33333%;
     display: table-cell;
+
+    @include respond(tab-land) {
+      display: flex;
+      width: 50%;
+    }
   }
 
   &__right {
@@ -35,6 +44,17 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-land) {
+      display: block;
+      margin: auto;
+      width: 80%;
+    }
+
+    @include respond(phone) {
+      width: 95%;
+      padding: 1rem 2rem;
+    }
   }
 
   &__img {
@@ -59,6 +79,14 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+
+    @include respond(phone) {
+      width: 90%;
+      column-count: 1;
+      column-gap: 0;
+      column-rule: none;
+      font-size: 1.2rem;
+    }
   }
 
   // The popup id class when button triggered is displayed
